# chatbot

./: README.md
backend/: app.py  pyproject.toml
backend/api/: documents.txt
backend/api/chat/: schemas.py  views.py
backend/api/files/: sports.txt
backend/api/storage/final presentation.pdf/: default__vector_store.json  docstore.json  index_store.json
backend/api/storage/spiderman.txt/: default__vector_store.json  docstore.json  index_store.json
backend/api/storage/sports.txt/: default__vector_store.json  docstore.json  index_store.json
backend/api/storage/takeoff.png/: default__vector_store.json  docstore.json  index_store.json
backend/api/upload/: views.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.jsx
frontend/src/components/: Button.jsx  Chat.jsx
frontend/src/pages/: Home.jsx
frontend/src/redux/: chatSlice.js  fileSlice.js  store.js
frontend/src/styles/: Home.css  index.css
